Add some futures propagation